[gd_scene load_steps=24 format=2]

[ext_resource path="res://airplane_menu.gd" type="Script" id=1]
[ext_resource path="res://stars/stars.shader" type="Shader" id=2]
[ext_resource path="res://ui_font/Tomorrow-ExtraBoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui_font/Tomorrow-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://airplane/airplane.obj" type="ArrayMesh" id=5]
[ext_resource path="res://parallax.gd" type="Script" id=6]
[ext_resource path="res://menu.gd" type="Script" id=7]
[ext_resource path="res://icon_font/icon_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://space_noise/space_noise_1.tres" type="Material" id=9]
[ext_resource path="res://space_noise/space_noise_2.tres" type="Material" id=10]
[ext_resource path="res://airplane/legalpad.jpg" type="Texture" id=11]
[ext_resource path="res://stars/stars.png" type="Texture" id=12]
[ext_resource path="res://space_noise/space_noise_0.tres" type="Material" id=13]
[ext_resource path="res://ui_font/Tomorrow-SemiBold.ttf" type="DynamicFontData" id=14]

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 12, 12, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 0.0
shader_param/uv1_scale = Vector3( 10, 10, 1 )
shader_param/uv1_offset = Vector3( 4.487, -10.587, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 110
outline_size = 4
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 84
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 29
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 31
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Menu" type="Spatial"]
script = ExtResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.396038, 0.59109, -0.702685, -0.532465, 0.771291, 0.3487, 0.748088, 0.236057, 0.620195, 0, 0, 0 )
directional_shadow_mode = 0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.054644, 0, 0.5 )
keep_aspect = 0
projection = 1
current = true
far = 10.0

[node name="space_noise" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="space_noise_0" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -3 )
mesh = SubResource( 2 )
material/0 = ExtResource( 13 )
script = ExtResource( 6 )
speed = 0.06

[node name="space_noise_1" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 1.5, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 0, -2 )
mesh = SubResource( 2 )
material/0 = ExtResource( 9 )
script = ExtResource( 6 )
speed = 0.05

[node name="space_noise_2" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 2, 0, 0, 0, -4.37114e-08, -2, 0, 1, -8.74228e-08, 0, 0, -1 )
mesh = SubResource( 2 )
material/0 = ExtResource( 10 )
script = ExtResource( 6 )
speed = 0.01

[node name="stars" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="stars_0" type="MeshInstance" parent="Camera/stars"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
script = ExtResource( 6 )
speed = 0.01

[node name="stars_1" type="MeshInstance" parent="Camera/stars"]
transform = Transform( 1.1, 0, 0, 0, -4.80825e-08, -1.1, 0, 1.1, -4.80825e-08, 0, 0, -1 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )
script = ExtResource( 6 )
speed = 0.05

[node name="airplane" type="MeshInstance" parent="Camera"]
transform = Transform( -7.84015, -1.4631, -1.56409, -1.59125, 7.20874, 7.70631, 1.3113e-06, 3.14537, -18.3893, -0.146494, -0.139583, -0.536 )
mesh = ExtResource( 5 )
material/0 = SubResource( 6 )
script = ExtResource( 1 )

[node name="GUI_layer" type="CanvasLayer" parent="."]
layer = -1

[node name="Title" type="Label" parent="GUI_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 52.0
margin_bottom = -416.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Paper Airplane"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="GUI_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 150.0
margin_bottom = -642.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "           goes to space!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new game" type="Button" parent="GUI_layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -12.0
margin_right = 411.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 9 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leaderboard" type="Button" parent="GUI_layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 76.0
margin_right = 411.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 9 )
text = "LEADERBOARD"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="change_name" type="Button" parent="GUI_layer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -87.0
margin_right = 379.0
margin_bottom = -24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.403922, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "U"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_name" type="Label" parent="GUI_layer/change_name"]
anchor_left = 0.228
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.31999
custom_fonts/font = SubResource( 10 )
text = "Richo"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GUI_layer/new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="GUI_layer/leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="GUI_layer/change_name" to="." method="_on_change_name_pressed"]
